2005-11-23  Matthias Wimmer  <m@tthias.net>

    * jabberd/lib/xmlnode.c: documentation, making some functions internal
    * jabberd/lib/jabberdlib.h: same
    * jabberd/lib/jid.c: removing unused function jid_xres

2005-11-21  Matthias Wimmer  <m@tthias.net>

    * jabberd/lib/jabberdlib.h: introducing xhash_get_by_domain()
    * jabberd/lib/xhash.c: same
    * dialback/dialback.h: same
    * dialback/dialback.c: same
    * dialback/dialback_in.c: same
    * dialback/dialback_out.c: same
    * jabberd/mio_tls.c: started GNU TLS certificate verification

2005-11-20  Matthias Wimmer  <m@tthias.net>

    * jabberd/mio.c: fixing bug introduced in revision 1146
    * dialback/dialback_in.c: fixing wrong auth in SASL code

2005-11-19  Matthias Wimmer  <m@tthias.net>

    * jabberd/mio.c: export STARTTLS functions even on no TLS support

2005-11-18  Matthias Wimmer  <m@tthias.net>

    * jabber.xml.dist.in: advertize that we support offline storage
    * jabberd/jabberd.h: started supporting GNU TLS, mio cleanup
    * jabberd/mio_xml.c: same
    * jabberd/mio_ssl.c: same
    * jabberd/mio_tls.c: same
    * jabberd/mio.c: same
    * jabberd/Makefile.am: same
    * jabberd/mio_raw.c: same
    * jabberd/base/base_connect.c: same
    * jabberd/base/base_accept.c: same
    * dialback/dialback_in.c: same
    * dialback/dialback_out.c: same
    * dialback/dialback.c: same
    * pthsock/client.c: same

2005-11-08  Matthias Wimmer  <m@tthias.net>

    * jabberd/jabberd.h: use less global variables
    * jabberd/heartbeat.c: same
    * jabberd/config.c: same
    * jabberd/load.c: same
    * jabberd/static.c: same
    * jabberd/base/base_exec.c: same
    * jabberd/base/base_dynamic.c: same
    * jabberd/base/base_unsubscribe.c: same
    * jabberd/base/base_format.c: same
    * jabberd/base/base_connect.c: same
    * jabberd/base/base_dir.c: same
    * jabberd/base/base_accept.c: same
    * jabberd/base/base_file.c: same
    * jabberd/base/base_syslog.c: same