@@ -1,3 +1,7 @@
+2005-11-25  Matthias Wimmer  <m@tthias.net>
+
+    * xdb_sql/xdb_sql.c: allow to execute an SQL statement on db (re)connect
+
 2005-11-23  Matthias Wimmer  <m@tthias.net>
 
     * jabberd/lib/xmlnode.c: documentation, making some functions internal
